--- a/src/css/overlay.css
+++ b/src/css/overlay.css
@@ -1,16 +1,17 @@
-#PPFrame .ppICMask {
-    z-index: 1000000000;
+.xcomponent-overlay {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: black;
-    background-image: radial-gradient(circle farthest-corner, #000000, #4A4A4A);
-    opacity: 0.80;
-    filter: alpha(opacity=80);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.xcomponent-overlay.xcomponent-popup {
     cursor: pointer;
 }
 
-#PPFrame .ppmodal {
+.xcomponent-overlay .ppmodal {
     font-family: "HelveticaNeue", "HelveticaNeue-Light", "Helvetica Neue Light", helvetica, arial, sans-serif;
     font-size: 14px;
     text-align: center;
@@ -29,101 +30,58 @@
     cursor: pointer;
 }
 
-#PPFrame .ppmodal .pplogo {
+.xcomponent-overlay .ppmodal .pplogo {
     background: url("https://www.paypalobjects.com/images/checkout/incontext/incontext_mask_sprite.png") no-repeat -18px -16px;
     width: 132px;
     height: 36px;
     cursor: pointer;
     margin: 26px 0 0 109px;
+    margin-bottom: 30px;
 }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 2), not all, not all, only screen and (min-resolution: 2dppx), only screen and (min-resolution: 192dpi) {
-    #PPFrame .ppmodal .pplogo {
-        background-image: url("https://www.paypalobjects.com/images/checkout/incontext/incontext_mask_sprite_2x.png");
-        background-size: 200px 200px;
-    }
-}
-
-.ppmodal .closeButton {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: inline-block;
-    text-indent: -999em;
-    cursor: pointer;
-    background: url("https://www.paypalobjects.com/images/checkout/incontext/incontext_mask_sprite.png") no-repeat -16px -60px;
-    width: 18px;
-    height: 18px;
-}
-
-.ppmodal .closeButton:focus, .ppmodal .closeButton:hover {
-    background: url("https://www.paypalobjects.com/images/checkout/incontext/incontext_mask_sprite.png") no-repeat -46px -60px;
-}
-
-.ppmodal .closeButton:focus {
-    outline: 1px solid #ffffff;
-}
-
-@media only screen and (-webkit-min-device-pixel-ratio: 2), not all, not all, only screen and (min-resolution: 2dppx), only screen and (min-resolution: 192dpi) {
-    .ppmodal .closeButton, .ppmodal .closeButton:focus, .ppmodal .closeButton:hover {
-        background-image: url("https://www.paypalobjects.com/images/checkout/incontext/incontext_mask_sprite_2x.png");
-        background-size: 200px 200px;
-    }
-}
-
-#PPFrame .ppmodal .text {
-    font-size: 14px;
-}
-
-#PPFrame .ppmodal a.button {
-    display: block;
-    cursor: pointer;
-    margin-top: 20px;
-    color: #0088cc;
-}
-
-.ppmodal a.ppbutton {
-    display: block;
-    margin: auto;
-    cursor: pointer;
-    margin-top: 20px;
-    color: #ffffff;
-    font-size: 15px;
-    font-weight: bold;
-    text-decoration: none;
-}
-
-.ppmodal a.ppbutton span {
-    background: url("https://www.paypalobjects.com/images/checkout/incontext/incontext_mask_sprite.png") no-repeat -15px -89px;
-    width: 7px;
-    height: 12px;
-    display: inline-block;
-}
-
-.ppmodal a.ppbutton:focus, .ppmodal a.ppbutton:hover {
-    color: #e6e6e6;
-    text-decoration: underline;
-}
-
-.ppmodal a.ppbutton:focus {
-    outline: none;
-}
-
-#PPFrame .ppmodal #ppmsg {
+.xcomponent-overlay .ppmodal .ppmsg{
     font-size: 15px;
     line-height: 1.35;
     padding: 25px 0;
 }
 
-
-a.ppbutton:hover span, a.ppbutton:focus span {
-    background: url("https://www.paypalobjects.com/images/checkout/incontext/incontext_mask_sprite.png") no-repeat -45px -89px;
-
+.xcomponent-overlay .ppmodal .continueLink{
+    font-size: 15px;
+    line-height: 1.35;
+    padding: 10px 0;
 }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 2), not all, not all, only screen and (min-resolution: 2dppx), only screen and (min-resolution: 192dpi) {
-    .frontArrow {
-        background-image: url("https://www.paypalobjects.com/images/checkout/incontext/incontext_mask_sprite_2x.png");
-        background-size: 200px 200px;
-    }
+.xcomponent-close {
+    position: absolute;
+    right: 16px;
+    top: 16px;
+    width: 16px;
+    height: 16px;
+    opacity: 0.6;
+}
+
+.xcomponent-close:hover {
+    opacity: 1;
+}
+
+.xcomponent-close:before, .xcomponent-close:after {
+    position: absolute;
+    left: 8px;
+    content: ' ';
+    height: 16px;
+    width: 2px;
+    background-color: white;
+}
+
+.xcomponent-close:before {
+    transform: rotate(45deg);
+}
+
+.xcomponent-close:after {
+    transform: rotate(-45deg);
+}
+
+a{
+
+    color: white;
 }
