Various IE fixes

--- a/src/components/checkout/parentTemplate.htm
+++ b/src/components/checkout/parentTemplate.htm
@@ -11,6 +11,8 @@
             <a href="#" class="xcomponent-focus">Continue</a>
         </div>
     </div>
+
+    <div class="{CLASS.ELEMENT}"></div>
 </div>
 
 <style>
@@ -101,6 +103,10 @@
     a{
 
         color: white;
+    }
+
+    .xcomponent-lightbox iframe {
+        border-radius: 10px;
     }
 
 </style>
