--- a/src/components/checkout/parentTemplate.htm
+++ b/src/components/checkout/parentTemplate.htm
@@ -105,7 +105,15 @@
 
     #{id}.{CLASS.LIGHTBOX} iframe {
         border-radius: 10px;
+
         background-color: white;
+
+        -webkit-transition: all 0.6s ease;
+        -moz-transition: all 0.6s ease;
+        -ms-transition: all 0.6s ease;
+        -o-transition: all 0.6 ease;
+        transition: all 0.6s ease;
+
 
         -webkit-animation-duration: 1s;
         animation-duration: 1s;
