--- a/src/components/checkout/componentTemplate.htm
+++ b/src/components/checkout/componentTemplate.htm
@@ -1,20 +1,122 @@
-<head>
+<style>
+    body {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        position: fixed;
+        top: 0;
+        left: 0;
+        margin: 0;
+    }
 
-    <style>
-        body {
-            background-color: white;
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
-            overflow: hidden;
-            position: fixed;
-            top: 0;
-            left: 0;
+    .loading #main {
+        opacity: .1
+    }
+    .spinner {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        z-index: 10
+    }
+    .spinner .spinWrap {
+        width: 200px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -100px;
+        height: 48px;
+        margin-top: -24px
+    }
+    .framed .spinner {
+        position: fixed
+    }
+    .framed .spinner .spinWrap {
+        position: fixed;
+        top: 50%;
+        height: 75px;
+        margin-top: -37.5px
+    }
+    .spinner .loader {
+        height: 30px;
+        width: 30px;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        margin: 0 0 0 -23px;
+        opacity: 1;
+        filter: alpha(opacity=100);
+        background-color: rgba(255, 255, 255, .701961);
+        -webkit-animation: rotation .7s infinite linear;
+        -moz-animation: rotation .7s infinite linear;
+        -o-animation: rotation .7s infinite linear;
+        animation: rotation .7s infinite linear;
+        border-left: 8px solid rgba(0, 0, 0, .2);
+        border-right: 8px solid rgba(0, 0, 0, .2);
+        border-bottom: 8px solid rgba(0, 0, 0, .2);
+        border-top: 8px solid #2180c0;
+        border-radius: 100%
+    }
+    .spinner .loadingMessage {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+        box-sizing: border-box;
+        width: 100%;
+        margin-top: 55px;
+        text-align: center;
+        z-index: 100;
+        outline: 0
+    }
+    .spinner .loadingSubHeading {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+        box-sizing: border-box;
+        width: 150%;
+        margin-top: 10px;
+        margin-left: -42px;
+        text-align: center;
+        z-index: 100;
+        outline: 0
+    }
+    @-webkit-keyframes rotation {
+        from {
+            -webkit-transform: rotate(0deg)
         }
-    </style>
+        to {
+            -webkit-transform: rotate(359deg)
+        }
+    }
+    @-moz-keyframes rotation {
+        from {
+            -moz-transform: rotate(0deg)
+        }
+        to {
+            -moz-transform: rotate(359deg)
+        }
+    }
+    @-o-keyframes rotation {
+        from {
+            -o-transform: rotate(0deg)
+        }
+        to {
+            -o-transform: rotate(359deg)
+        }
+    }
+    @keyframes rotation {
+        from {
+            transform: rotate(0deg)
+        }
+        to {
+            transform: rotate(359deg)
+        }
+    }
+</style>
 
-</head>
-
-<body>
-    loading...
-</body>
+<div id="preloaderSpinner" class="preloader spinner">
+    <div class="spinWrap">
+        <p class="loader"></p>
+        <p class="loadingMessage" id="spinnerMessage"></p>
+        <p class="loadingSubHeading" id="spinnerSubHeading"></p>
+    </div>
+</div>
