Use the new style spinner

--- a/src/components/checkout/componentTemplate.htm
+++ b/src/components/checkout/componentTemplate.htm
@@ -9,76 +9,53 @@
         margin: 0;
     }
 
-    .loading #main {
-        opacity: .1
-    }
     .spinner {
         height: 100%;
         width: 100%;
         position: absolute;
         z-index: 10
     }
+
     .spinner .spinWrap {
         width: 200px;
+        height: 100px;
         position: absolute;
         top: 50%;
         left: 50%;
         margin-left: -100px;
-        height: 48px;
-        margin-top: -24px
+        margin-top: -50px
     }
-    .framed .spinner {
-        position: fixed
-    }
-    .framed .spinner .spinWrap {
-        position: fixed;
-        top: 50%;
-        height: 75px;
-        margin-top: -37.5px
-    }
-    .spinner .loader {
-        height: 30px;
-        width: 30px;
+
+    .spinner .loader,
+    .spinner .spinnerImage {
+        height: 100px;
+        width: 100px;
         position: absolute;
         top: 0;
         left: 50%;
-        margin: 0 0 0 -23px;
         opacity: 1;
-        filter: alpha(opacity=100);
-        background-color: rgba(255, 255, 255, .701961);
+        filter: alpha(opacity=100)
+    }
+
+    .spinner .spinnerImage {
+        margin: 28px 0 0 -25px;
+        background: url(https://www.paypalobjects.com/images/checkout/hermes/icon_ot_spin_lock_skinny.png) no-repeat
+    }
+
+    .spinner .loader {
+        margin: 0 0 0 -55px;
+        background-color: transparent;
         -webkit-animation: rotation .7s infinite linear;
         -moz-animation: rotation .7s infinite linear;
         -o-animation: rotation .7s infinite linear;
         animation: rotation .7s infinite linear;
-        border-left: 8px solid rgba(0, 0, 0, .2);
-        border-right: 8px solid rgba(0, 0, 0, .2);
-        border-bottom: 8px solid rgba(0, 0, 0, .2);
-        border-top: 8px solid #2180c0;
+        border-left: 5px solid #cbcbca;
+        border-right: 5px solid #cbcbca;
+        border-bottom: 5px solid #cbcbca;
+        border-top: 5px solid #2380be;
         border-radius: 100%
     }
-    .spinner .loadingMessage {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        -ms-box-sizing: border-box;
-        box-sizing: border-box;
-        width: 100%;
-        margin-top: 55px;
-        text-align: center;
-        z-index: 100;
-        outline: 0
-    }
-    .spinner .loadingSubHeading {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        -ms-box-sizing: border-box;
-        box-sizing: border-box;
-        width: 150%;
-        margin-top: 10px;
-        margin-left: -42px;
-        text-align: center;
-        z-index: 100;
-        outline: 0
-    }
+
     @-webkit-keyframes rotation {
         from {
             -webkit-transform: rotate(0deg)
@@ -115,8 +92,7 @@
 
 <div id="preloaderSpinner" class="preloader spinner">
     <div class="spinWrap">
+        <p class="spinnerImage"></p>
         <p class="loader"></p>
-        <p class="loadingMessage" id="spinnerMessage"></p>
-        <p class="loadingSubHeading" id="spinnerSubHeading"></p>
     </div>
 </div>
