Do not add padding in lightbox container element

--- a/src/components/checkout/parentTemplate.htm
+++ b/src/components/checkout/parentTemplate.htm
@@ -177,7 +177,7 @@
     }
 
     #{id}.{CLASS.LIGHTBOX}.set-width.set-height .paypal-checkout-lightbox-wrapper {
-        padding: 5px;
+        overflow: hidden;
         border-radius: 10px;
     }
 
