Add correct z-index for overlay

--- a/src/components/checkout/parentTemplate.htm
+++ b/src/components/checkout/parentTemplate.htm
@@ -20,7 +20,10 @@
 <style>
 
     #{id} .paypal-checkout-overlay {
+        
         position: fixed;
+        z-index: 2147483647;
+
         top: 0;
         left: 0;
         width: 100%;
