Rely on xcomponent to provide fixed position for overlay container

--- a/src/components/checkout/parentTemplate.htm
+++ b/src/components/checkout/parentTemplate.htm
@@ -20,9 +20,8 @@
 <style>
 
     #{id} .paypal-checkout-overlay {
-        
-        position: fixed;
-        z-index: 2147483647;
+
+        position: absolute;
 
         top: 0;
         left: 0;
@@ -76,7 +75,6 @@
         font-size: 14px;
         text-align: center;
         color: #fff;
-        z-index: 1000000002;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         -ms-box-sizing: border-box;
