Ensure box-sizing does not affect spinner sie

--- a/src/components/checkout/parentTemplate.htm
+++ b/src/components/checkout/parentTemplate.htm
@@ -381,6 +381,7 @@
         height: 30px;
         width: 30px;
         display: inline-block;
+        box-sizing: content-box;
         opacity: 1;
         filter: alpha(opacity=100);
         -webkit-animation: rotation .7s infinite linear;
