--- a/src/components/checkout/parentTemplate.htm
+++ b/src/components/checkout/parentTemplate.htm
@@ -19,6 +19,15 @@
 
 <style>
 
+    #{id}.{CLASS.POPUP}, #{id}.{CLASS.LIGHTBOX} {
+        position: fixed;
+        z-index: 2147483647;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
     #{id} .paypal-checkout-overlay {
 
         position: absolute;
