--- a/src/components/checkout/componentTemplate.htm
+++ b/src/components/checkout/componentTemplate.htm
@@ -4,6 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>PayPal</title>
+
     <style>
         body {
             width: 100%;
