fix Lightbox scrolling for iOS (#92)

--- a/src/components/checkout/parentTemplate.htm
+++ b/src/components/checkout/parentTemplate.htm
@@ -229,7 +229,8 @@
             background-color: white;
             border-radius: 10px;
 
-            overflow: hidden;
+            overflow: scroll;
+            -webkit-overflow-scrolling:touch;
 
         }
 
