--- a/src/components/checkout/parentTemplate.htm
+++ b/src/components/checkout/parentTemplate.htm
@@ -229,8 +229,8 @@
             background-color: white;
             border-radius: 10px;
 
-            overflow: scroll;
-            -webkit-overflow-scrolling:touch;
+            /* overflow: scroll;
+            -webkit-overflow-scrolling:touch; */
 
         }
 
